--- a/_posts/2017-07-10-quadtree.md
+++ b/_posts/2017-07-10-quadtree.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Quadtree"
 date:   2017-07-10 14:42:29
 categories: Algorithm
-excerpt: 프로그래밍 대회에서 배우는 알고리즘 문제 해결 전략, Algospot, 알고스팟, QUADTREE
+excerpt: 프로그래밍 대회에서 배우는 알고리즘 문제 해결 전략, Algospot, 알고스팟, QUADTREE, 분할정복, Divede and Conquer
 ---
 
 * content
