--- a/_posts/2017-07-10-quadtree.md
+++ b/_posts/2017-07-10-quadtree.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title:  "Quadtree"
+title:  "쿼드트리 뒤집기"
 date:   2017-07-10 14:42:29
 categories: Algorithm
+author: Heeveloper
 tags: 프로그래밍대회에서배우는알고리즘문제해결전략 Algospot 알고스팟 QUADTREE 분할정복 DivedeandConquer
-excerpt: Algospot
+excerpt: QUADTREE
 mathjax : false
 ---
 
@@ -33,7 +34,7 @@ mathjax : false
 * 수정된 값을  stack에 넣어준다.
 * 다음 index부터 다시 반복.
 
-<pre><code>
+~~~c++
 for(long i=input.size()-1;i>=0;i--){
             if(input.at(i) != 'x'){
                 output.push(input.substr(i,1));
@@ -47,7 +48,7 @@ for(long i=input.size()-1;i>=0;i--){
                 output.push(x);
             }
 }
-</code></pre>
+~~~
 
 
 ---
@@ -60,7 +61,7 @@ for(long i=input.size()-1;i>=0;i--){
 3. 귀속시키려는 4개의 원소중에 x가 또 등장하면 2번 연산이 다시 재귀적으로 동작한다.
 
 ## 5. Implementation
-<pre><code>
+~~~c++
 string reverse(string::iterator& it){
             char ch = *it;
             it++;
@@ -76,7 +77,7 @@ string reverse(string::iterator& it){
 
             return "x"+s3+s4+s1+s2;
 }
-</code></pre>
+~~~
 
 * input의 iterator를 parameter로 받아 사용한다는 점에 주목하자. 단순히 int index를 사용하여 접근해도 되지만 다양한 접근 방법을 알고 있으면 그만큼 다양한 구현 방법도 생각할 수 있을 것으로 여겨진다. 호출되는 재귀함수간의 인과관계가 좀 더 복잡한 경우에 유용할 것으로 생각된다.  
 
