--- a/_posts/2017-07-23-Hanoi4.md
+++ b/_posts/2017-07-23-Hanoi4.md
@@ -255,7 +255,7 @@ int bidir(int discs, int begin, int end){
 ## 6. Analysis
 * 양방향 탐색의 코드를 보면 너비 우선 탐색과 크게 다르지 않은 것을 알 수 있다. 하지만 실제 방문하는 정점의 수는 크게 줄어들고, 실제 수행 시간도 열 배 가까이 감소하는 것을 확인할 수 있다.
 
-![screenshot](/img/hanoi4_compare.png/)
+![screenshot](/img/hanoi4_compare.png)
 
 ---
 ## 7. Feedback
